fix: Update visibility condition for recording tooltip in TitleBar
- Modified the visibility condition for the recording tooltip to include the isPlaying state, ensuring accurate feedback to users regarding recording capabilities based on the current playback status.

Log: Enhanced tooltip visibility logic in WindowTitleBar.qml to improve user experience during recording and playback interactions.

bug： https://pms.uniontech.com/bug-view-310867.html

--- a/src/web/css/voiceplayback.css
+++ b/src/web/css/voiceplayback.css
@@ -179,6 +179,23 @@
 
 .voicePlayback .closePlaybackBarBtn {
     display: none;
+    margin-left: 10px;
+    align-items: horizontal;
+    width: 16px;
+    height: 16px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+/* 播放或暂停时显示关闭按钮 */
+.voicePlayback.play .closePlaybackBarBtn,
+.voicePlayback.pause .closePlaybackBarBtn {
+    display: block;
+    background-image: none;
+    background-color: var(--color);
+    -webkit-mask: url('../img/playbar_pause_close/Normal.svg') no-repeat center/cover;
+    mask: url('../img/playbar_pause_close/Normal.svg') no-repeat center/cover;
 }
 
 .airVoicePlaybackContainer .closePlaybackBarBtn {
